# Tempest

./: .gitignore  .gitmodules  LICENSE  README.md  appveyor.yml
Editor/: CMakeLists.txt  CMakeLists.txt.user.4.8-pre1  main.cpp  mainwindow.cpp  mainwindow.h  resources.cpp  resources.h  shader.vert
Editor/editor/: texteditor.cpp  texteditor.h
Editor/ui/: mdiwindow.cpp  mdiwindow.h  projecttree.cpp  projecttree.h
Engine/: CMakeLists.txt  CMakeLists.txt.user.4.8-pre1
Engine/2d/: brush.cpp  brush.h  icon.cpp  icon.h  paintdevice.cpp  paintdevice.h  painter.cpp  painter.h  pen.cpp  pen.h  transform.cpp  transform.h  vectorimage.cpp  vectorimage.h
Engine/assets/: asset.cpp  asset.h  assets.cpp  assets.h
Engine/cmake/: FindD3D12.cmake
Engine/exceptions/: exception.cpp  exception.h
Engine/fonts/: CMakeLists.txt  compile_fonts.cmake
Engine/formats/: ddsdef.h  font.cpp  font.h  pixmap.cpp  pixmap.h  pixmapcodec.cpp  pixmapcodec.h
Engine/formats/image/: pixmapcodeccommon.cpp  pixmapcodeccommon.h  pixmapcodecdds.cpp  pixmapcodecdds.h  pixmapcodechdr.cpp  pixmapcodechdr.h  pixmapcodecpng.cpp  pixmapcodecpng.h
Engine/gapi/: abstractgraphicsapi.cpp  abstractgraphicsapi.h  deviceallocator.cpp  deviceallocator.h  directx12api.cpp  directx12api.h  flags.h  graphicsmemutils.h  metalapi.cpp  metalapi.h  metalapi.mm  rectalllocator.cpp  rectalllocator.h  rectallocator.cpp  rectallocator.h  resourcestate.cpp  resourcestate.h  shader.cpp  shader.h  shaderreflection.cpp  shaderreflection.h  uploadengine.cpp  uploadengine.h  vulkanapi.cpp  vulkanapi.h
Engine/gapi/directx12/: comptr.h  dxaccelerationstructure.cpp  dxaccelerationstructure.h  dxallocator.cpp  dxallocator.h  dxbuffer.cpp  dxbuffer.h  dxcommandbuffer.cpp  dxcommandbuffer.h  dxdescriptorallocator.cpp  dxdescriptorallocator.h  dxdescriptorarray.cpp  dxdescriptorarray.h  dxdevice.cpp  dxdevice.h  dxevent.cpp  dxevent.h  dxfbolayout.cpp  dxfbolayout.h  dxfence.cpp  dxfence.h  dxframebuffer.cpp  dxframebuffer.h  dxheapallocator.cpp  dxheapallocator.h  dxpipeline.cpp  dxpipeline.h  dxpipelinelay.cpp  dxpipelinelay.h  dxpushdescriptor.cpp  dxpushdescriptor.h  dxrenderpass.cpp  dxrenderpass.h  dxshader.cpp  dxshader.h  dxswapchain.cpp  dxswapchain.h  dxtexture.cpp  dxtexture.h  dxuniformslay.cpp  (+2 more)
Engine/gapi/metal/: mtaccelerationstructure.cpp  mtaccelerationstructure.h  mtaccelerationstructure.mm  mtbuffer.cpp  mtbuffer.h  mtbuffer.mm  mtcommandbuffer.cpp  mtcommandbuffer.h  mtcommandbuffer.mm  mtdescriptorarray.cpp  mtdescriptorarray.h  mtdescriptorarray.mm  mtdevice.h  mtdevice.mm  mtfbolayout.cpp  mtfbolayout.h  mtfbolayout.mm  mtframebuffer.h  mtframebuffer.mm  mtpipeline.cpp  mtpipeline.h  mtpipeline.mm  mtpipelinelay.cpp  mtpipelinelay.h  mtpipelinelay.mm  mtrenderpass.h  mtrenderpass.mm  mtsamplercache.cpp  mtsamplercache.h  mtsamplercache.mm  mtshader.cpp  mtshader.h  mtshader.mm  mtswapchain.h  mtswapchain.mm  mtsync.cpp  mtsync.h  mtsync.mm  mttexture.cpp  mttexture.h  (+3 more)
Engine/gapi/spirv/: meshconverter.cpp  meshconverter.h  shaderanalyzer.cpp  shaderanalyzer.h
Engine/gapi/vulkan/: vaccelerationstructure.cpp  vaccelerationstructure.h  vallocator.cpp  vallocator.cpp.autosave  vallocator.h  vbindlesscache.cpp  vbindlesscache.h  vbuffer.cpp  vbuffer.h  vcommandbuffer.cpp  vcommandbuffer.h  vcommandbundle.cpp  vcommandbundle.h  vcommandpool.cpp  vcommandpool.h  vdescriptorarray.cpp  vdescriptorarray.h  vdevice.cpp  vdevice.h  vfence.cpp  vfence.h  vframebuffer.cpp  vframebuffer.h  vframebufferlayout.cpp  vframebufferlayout.h  vframebuffermap.cpp  vframebuffermap.h  vimage.cpp  vimage.h  (+35 more)
Engine/graphics/: accelerationstructure.cpp  accelerationstructure.h  attachment.cpp  attachment.h  builtin.cpp  builtin.h  commandbuffer.cpp  commandbuffer.h  commandpool.cpp  commandpool.h  computepipeline.cpp  computepipeline.h  descriptorarray.cpp  descriptorarray.h  descriptorset.cpp  descriptorset.h  device.cpp  device.h  encoder.cpp  encoder.h  fence.cpp  fence.h  frame.cpp  frame.h  framebuffer.cpp  framebuffer.h  headlessdevice.cpp  headlessdevice.h  indexbuffer.cpp  indexbuffer.h  painter.cpp  painter.h  pipelinelayout.cpp  pipelinelayout.h  renderpass.cpp  renderpass.h  renderpipeline.cpp  renderpipeline.h  renderstate.cpp  renderstate.h  (+28 more)
Engine/io/: idevice.cpp  idevice.h  memreader.cpp  memreader.h  memwriter.cpp  memwriter.h  odevice.cpp  odevice.h  rfile.cpp  rfile.h  rfile.mm  wfile.cpp  wfile.h
Engine/libspirv/: libspirv.cpp  libspirv.h
Engine/math/: matrix.cpp  matrix.h
Engine/shaders/: blit.comp  blit.frag  blit.vert  brush.frag  brush.vert  copy.comp  empty.frag  empty.frag.sprv  empty.vert  empty.vert.sprv  link_shaders.cmake  mesh_compactage.comp  mesh_init.comp  mesh_prefix_pass.comp  shaders.inl  task_lut_pass.comp  task_post_pass.comp  tex_brush.frag  tex_brush.frag.sprv  tex_brush.vert.sprv
Engine/sound/: sound.cpp  sound.h  sounddevice.cpp  sounddevice.h  soundeffect.cpp  soundeffect.h
Engine/system/: application.cpp  application.h  eventdispatcher.cpp  eventdispatcher.h  platform.h  signalstorage.h  systemapi.cpp  systemapi.h  tempestsignal.h  timer.cpp  timer.h  windowsapi.cpp  windowsapi.h  x11api.h
Engine/ui/: dialog.cpp  dialog.h  event.cpp  event.h  layout.cpp  layout.h  shortcut.cpp  shortcut.h  sizepolicy.cpp  sizepolicy.h  style.cpp  style.h  textmodel.cpp  textmodel.h  uioverlay.cpp  uioverlay.h  undostack.cpp  undostack.h  widget.cpp  widget.h  widgetstate.h  window.cpp  window.h
Engine/utility/: alignedarray.cpp  alignedarray.h  color.h  compiller_hints.h  dir.cpp  dir.h  dptr.cpp  dptr.h  log.cpp  log.h  smallarray.h  spinlock.h  textcodec.cpp  textcodec.h  utf8_helper.h  utility.h
Examples/Empty/: CMakeLists.txt  game.cpp  game.h  main.cpp  shader.frag  tex_brush.frag
Tests/tests/: CMakeLists.txt  allocator_test.cpp  atlas_test.cpp  draw2d_test.cpp  enable_test.cpp  eventdispatcher_test.cpp  focus_test.cpp  gpudevice_test.cpp  io_test.cpp  layout_test.cpp  log_test.cpp  main.cpp  pixmap_test.cpp  resourcestate_test.cpp  signal_test.cpp  textcodec_test.cpp  utils_test.cpp
(+228 files in other folders)
